# project_1_rust

./: Cargo.toml  Dockerfile  SOCKET_API.md
.github/workflows/: project1-AutoDeployTrigger-c877c449-e9c2-4739-a2da-8fadb5228f9b.yml
.sqlx/: query-116f42ed55fdc64cb3ddbd834090307edfe141919177f4952d190ef9e3dc9479.json  query-153f6355937c155dbc6817fedfc02d9759378639af5269f3f3767fd498ac2152.json  query-1d0770fd90402c15e54f87b9140b756da361336980888688099a8428297cf244.json  query-261e712b5a4b10c084dc238f1ab8ab3b66282853864b2df6706dece6cb6a0e62.json  query-28da4be71ac305b3ec7eced4cde69797dfeead7fec23ff399db6a96c6431b40f.json  query-374e4d1f579ebe903650b4012935bab0ce96e44489acf44cb852d623d3a75975.json  query-43a71361d612927e7185db93ded241b50540c2b9e0d777c2e2ba8fdaf7b42a88.json  query-74cfdcbd01fbb5c86ee899544c70adf210b74de1d6a169b354f7b575c27a0f78.json  query-8780baa8ed4f1851d498f367cd122098614de0448dd96fbd419433d3142adc43.json  query-8c7bac09ed75283302c950b47bb84364d4f90b590fe3eb6c2380d73185967330.json  query-b35830d80759abc25e81aaca8e67c98780a2d3895ec0e7eaf0cbdf560f4e8237.json  query-d638e1f90507d3329fb1ef46d31b969007efba9ed1b7fe3f7b4340fb34c5bba0.json  query-ed824cc33eb14d035d07f1611a11b3068daaa667b882a9d8577b7f29f6151fde.json
migrations/: 20260201121038_create_users_table.sql  20260202093627_user_login_token.sql  20260205172655_user-connection.sql
src/: app_state.rs  main.rs
src/db/: connect_db.rs  mod.rs
src/db/models/: login_token.rs  (+3 more)
src/routes/: app_router.rs  mod.rs
src/utils/: auth_middleware.rs  mod.rs  resolve_base_url.rs
templates/mails/: signup.html
(+30 files in other folders)
