[package]
name = "project1_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bb8 = "0.9.1"
bb8-redis = "0.26.0"
bcrypt = "0.18.0"
chrono = "0.4.43"
dotenv = "0.15.0"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.9.2"
redis = { version = "1.0.3", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = {version = "0.8.6",features = ["postgres","macros","uuid","chrono","runtime-tokio-rustls"]}
tera = "1.20.1"
tokio = { version = "1.49.0",features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
